2009-02-25  Sancho Lerena <lserena@artica.es>

	* general/error_perms.php: Typo fixed. This is Beta2 officially.

2009-02-23  Sancho Lerena  <slerena@artica.es>

	*  operation/incidents/incident_detail.php: SLA Alert removed when
	update or add any workunit to an incident.

	* integria_db.sql: Fixed a possible problem with Mysql FK creation.

	* functions_db.php: Support for external usermode. Fixed some problems with
	rendering of status and resolution in mail. Fixed probles due enterprise
	call wihout table reference. Added creator on count of active incidents. 
	Added new functions to render resolution and status.
	
	* functions_form.php: Default search is now "non-closed incidents" that
	groups status 1-5. Fixed repeated info on incident side menu info and 
	reordered other info.
	
	* include/config_process.php: Added support for incident_reporter switch.
	
	* include/functions_incidents.php: Added support for external users,
	better text search (now by creator, and owner username), and support for
	search on "non closed incidents" special status code -10.
	
	* operation/incidents/incident.php: Fixed JS code for automatic selection
	on search/status on incident.
	
	* operation/incidents/incident_inventory_contacts.php: Added support for
	incident_reporter switch to show control only if enabled.
	
	* operation/incidents/incident_detail.php: Added incident_reporter code,
	fixed all problems with SLA_Disable, now works and also disable running SLA
	warnings if disabled. Users without Manage permissions cannot change default
	assigned user neither status or resolution. 
	
	* operation/incidents/incident_workunits.php: Added link to incident full
	view (is not the best solution, but works).
	
	* operation/side_menu.php: Removed old options (like weekly reports and view
	vacations ) and added new ones, like filemanager menu.
	
	* operation/main_menu.php: Fixed bug with inventory ACL. 
	
	* operation/users/user_spare_workunit.php: Passing dates from month view