@@ -800,9 +800,11 @@ function incident_users_list ($id_incident, $return = false) {
 	
 	if ($users['affected'])
 	foreach ($users['affected'] as $user) {
-		$output .= "&nbsp;&nbsp;" . print_user_avatar ($user['id_usuario'], true, true);
-		$output .= ' <strong>'.$user['id_usuario'].'</strong> (<em>'.__('Participant').'</em>)';
-		$output .= "<br>";
+		if (!get_external_user($user['id_usuario'])){
+			$output .= "&nbsp;&nbsp;" . print_user_avatar ($user['id_usuario'], true, true);
+			$output .= ' <strong>'.$user['id_usuario'].'</strong> (<em>'.__('Participant').'</em>)';
+			$output .= "<br>";
+		}
 	}
 	
 	$output .= '</ul>';
